--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "test": "web-test-runner \"src/**/*.test.ts\""
   },
   "dependencies": {
-    "svelte": "^3.37.0"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "svelte": "^3.37.0",
+    "svelte-spa-router": "^3.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
@@ -19,6 +23,8 @@
     "@types/snowpack-env": "^2.3.3",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
+    "finalhandler": "^1.1.2",
+    "http2-proxy": "^5.0.53",
     "snowpack": "^3.3.7",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4"
