--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "15.8"
+  },
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -13,8 +16,7 @@
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-svelte": "^3.6.1",
-    "@snowpack/plugin-typescript": "^1.2.1",
+    "@snowpack/plugin-svelte": "^3.7.0",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^1.0.10",
@@ -23,10 +25,10 @@
     "@types/snowpack-env": "^2.3.3",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
+    "dotenv": "^8.6.0",
     "finalhandler": "^1.1.2",
     "http2-proxy": "^5.0.53",
     "snowpack": "^3.3.7",
-    "svelte-preprocess": "^4.7.2",
-    "typescript": "^4.2.4"
+    "svelte-preprocess": "^4.7.2"
   }
 }
